# Game_Jetgame_New

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml
docs/: controls.md  installation.md
src/: CMakeLists.txt  Makefile  app.cpp  app.hpp  bullet.cpp  bullet.hpp  definitions.hpp  entity.cpp  entity.hpp  evHandler.cpp  evHandler.hpp  globals.hpp  main.cpp  player.cpp  player.hpp
src/actors/: CMakeLists.txt  bullet.cpp  bullet.hpp  entity.cpp  entity.hpp  player.cpp  player.hpp
src/app/: CMakeLists.txt  Direction.hpp  Game.cpp  Game.hpp  Gamestate.hpp  app.cpp  app.hpp  evHandler.cpp  evHandler.hpp
